<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusPenyewaActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:text="@string/nama"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="92dp"
            android:text="@string/tempat_user"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="148dp"
            android:text="@string/pintu_user"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="355dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="204dp"
            android:layout_marginStart="10dp"
            android:text="@string/biaya_user"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="355dp"
            android:layout_height="71dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="251dp"
            android:text="@string/status_user"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

    </RelativeLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>